[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
  { name = "Jason Manuel", email = "jama.indo@hotmail.com" }
]
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Interpreters",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
]
dependencies = [
  'astunparse>=1.3.0,<2',
  'parsy>=1.3.0,<2',
  'typing-extensions>=4',
]
description = "An experimental concatenative Python-based programming language"
dynamic = ["version"]
keywords = ["concatenative", "interpreter", "transpiler"]
license-files = { paths = ["LICENSE.md"] }
name = "concat"
readme = "README.md"

[project.optional-dependencies]
dev = [
  "axblack==20220330",
  "mypy>=1.1.1",
  "pre-commit>=2.6.0,<3",
  "tox>=4.5.1,<5",
]


[project.urls]
"Source code" = "https://github.com/jmanuel1/concat"

[tool.hatch.version]
path = "concat/__init__.py"
pattern = "version = '(?P<version>.*)'"
