[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
  { name = "Jason Manuel", email = "jama.indo@hotmail.com" }
]
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Interpreters",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
]
dependencies = [
  'astunparse>=1.3.0,<2',
  'typing-extensions>=4',
]
description = "An experimental concatenative Python-based programming language"
dynamic = ["version"]
keywords = ["concatenative", "interpreter", "transpiler"]
license-files = { paths = ["LICENSE.md"] }
name = "concat"
readme = "README.md"

[project.optional-dependencies]
dev = [
  "axblack==20220330",
  "importlib-metadata<5",
  "mypy>=1.1.1",
  "pre-commit>=2.6.0,<3",
  "pylsp-mypy",
  "python-lsp-server[all]==1.7.2",
  "snakeviz",
  "virtualenv<=20.17.1",
]
test = [
  "coverage>=6.4.4,<7",
  "hypothesis>=6.75.1,<7",
  "nose2==0.13.0",
  "pywinpty>=2.0.7,<3; platform_system==\"Windows\"",
  "scripttest",
]

[project.urls]
"Source code" = "https://github.com/jmanuel1/concat"

[tool.hatch.version]
path = "concat/__init__.py"
pattern = "version = '(?P<version>.*)'"

[tool.hatch.envs.default]
features = [
  "dev",
  "test",
]
python = "3.7"

[tool.hatch.metadata]
allow-direct-references = true
