[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
  { name = "Jason Manuel", email = "jama.indo@hotmail.com" }
]
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Interpreters",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  'astunparse>=1.3.0,<2',
  'typing-extensions>=4',
]
description = "An experimental concatenative Python-based programming language"
dynamic = ["version"]
keywords = ["concatenative", "interpreter", "transpiler"]
license-files = { paths = ["LICENSE.md"] }
name = "concat"
readme = "README.md"

[project.optional-dependencies]
dev = [
  "flake8>=7.1.0,<8",
  "mypy>=1.12.0,<2",
  "pre-commit>=2.6.0,<3",
  "pylsp-mypy",
  "python-lsp-server[all]>=1.12.0,<2",
  "ruff",
  "snakeviz",
]
test = [
  "coverage>=6.4.4,<7",
  "hypothesis>=6.75.1,<7",
  "nose2==0.13.0",
  "pywinpty>=2.0.7,<3; platform_system==\"Windows\"",
  "scripttest",
]

[project.urls]
"Source code" = "https://github.com/jmanuel1/concat"

[tool.hatch.version]
path = "concat/__init__.py"
pattern = "version = '(?P<version>.*)'"

[tool.hatch.envs.default]
features = [
  "dev",
  "test",
]
python = "3.12"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "C90"]
ignore = ["F402"]

[tool.ruff.lint.mccabe]
max-complexity = 14 # max allowed, mccabe equivalent setting would be 15 for warrning *at* 15
